Fixed bugs associated with the dark mode toggle

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,28 +1,28 @@
 
 .home-big-container {
     padding: 40px;
-    background-color: #f5f5f5;
+    background-color: #333;
     min-height: 100vh;
 }
 
-.dark-mode {
-    background-color: #333;
-    color: #fff;
+.light-mode {
+    background-color: #f5f5f5;
 }
 
 .home-container {
     text-align: center;
     padding: 40px;
-    background-color: #f5f5f5;
+    background-color: #333;
+    color:#fff;
     min-height: 100vh;
 }
 
-.dark-mode .home-container {
-    background-color: #333;
-    color: #fff;
+.light-mode .home-container {
+    background-color: #f5f5f5;
+    color: #333;
 }
   
-.dark-mode .log-in-button {
+.light-mode .log-in-button {
     background-color: #fff;
     color: #333;
 }
@@ -57,12 +57,12 @@
     position: absolute;
     width: 50px;
     height: 28px;
-    left: 1450px;
+    right: 20px;
     top: 20px;
     padding: 2.5px;
     border-radius: 22.5px;
     border: 1.5px solid #fff;
-    background-color: #333;
+    background-color: #271752;
     overflow: hidden;
     transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);     
 }
@@ -76,17 +76,17 @@
 .small {
     width: 15px;
     height: 15px;
-    background: #333;
+    background: #271752;
     left: 15px;
-    top: 1.5px;
+    top: 2px;
     transition: all 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 
 .large {
-    width: 20px;
-    height: 20px;
+    width: 19px;
+    height: 19px;
     background: #fff;
-    border: 1.5px solid #fff;
+    border: 2px solid #fff;
     top: 50%;
     transform: translateY(-50%);
     left: 7px;
@@ -112,7 +112,7 @@
 
 .move .large {
     left: 25px;
-    background: yellow;
+    background: rgb(255, 247, 0);
     border-color: orange;
 }
 
